Form Validation Form validation added to application. Google places autocomplete added to application. App broken down into modules.

--- a/views/partials/document.ejs
+++ b/views/partials/document.ejs
@@ -7,7 +7,7 @@
         idea of the overall health of your business.
       </p>
       <div class="form-group">
-        <button class="btn  btn-primary" type="button" ng-click="next('submission')">SUBMIT FOR OFFERS</button>
+        <button class="btn  btn-primary" type="button" ng-click="next('sign')">SUBMIT FOR OFFERS</button>
         <button class="btn  btn-default" type="button">Back</button>
       </div>
     </form>
