--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
   <!--<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
   <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
   <![endif]-->
-
+  <!-- <base href="/"> -->
 </head>
 
 <body ng-app="app">
@@ -43,7 +43,7 @@
         <!--<li role="presentation"><a href="#">Contact</a></li>-->
       </ul>
     </nav>
-    <a href="/"><h3 class="text-muted">Lending App</h3></a>
+    <a href="#/"><h3 class="text-muted">Lending App</h3></a>
   </div>
 
   <div ng-view autoscroll="true"></div>
@@ -58,14 +58,16 @@
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="/components/angular/angular.js"></script>
 <script src="/components/angular-route/angular-route.js"></script>
 <script src="/components/angular-resource/angular-resource.min.js"></script>
+<script src="/components/angular-sanitize/angular-sanitize.min.js"></script>
+<script src="/components/angular-messages/angular-messages.min.js"></script>
 <script src="/js/app.js"></script>
+<script src='/js/app.service.js'></script>
 <script src="/js/owner.controller.js"></script>
-<script src="/js/business.controller.js"></script>
-<script src="/js/document.controller.js"></script>
-<script src="/js/submission.controller.js"></script>
-<script src="/js/services.js"></script>
+<script src="/js/company.controller.js"></script>
+<script src="/js/app.directive.js"></script>
 </body>
 </html>
