Upload form complete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,10 +64,12 @@
 <script src="/components/angular-resource/angular-resource.min.js"></script>
 <script src="/components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="/components/angular-messages/angular-messages.min.js"></script>
-<script src="/js/app.js"></script>
+<script src="/js/app.module.js"></script>
 <script src='/js/app.service.js'></script>
 <script src="/js/owner.controller.js"></script>
 <script src="/js/company.controller.js"></script>
+<script src="js/document.controller.js"></script>
 <script src="/js/app.directive.js"></script>
+<script src="/js/app.factory.js"></script>
 </body>
 </html>
