--- a/views/partials/owner.ejs
+++ b/views/partials/owner.ejs
@@ -73,7 +73,7 @@
                ng-maxlength="30"
                required
               ng-model="owner.ow_home_address"
-              googlePlace>
+              owner>
         <div class="help-block" ng-messages="ownerForm.location.$error" ng-show="ownerForm.location.$touched">
           <div ng-messages-include="partials/message.ejs"></div>
         </div>
