--- a/views/partials/document.ejs
+++ b/views/partials/document.ejs
@@ -1,12 +1,24 @@
 <div class="row">
 
   <div class="col-md-8">
-    <h3>Lastly we need to you t upload your bank statements</h3>
-    <form>
-      <p>Your business bank statements help get a better
-        idea of the overall health of your business.
-      </p>
+    <!-- <h3>Lastly we need to you t upload your bank statements</h3> -->
+    <form name="documentForm">
+    
+    <div class="form-group">
+      <input type = "file" class="form-control" file-model = "file"/>
+    </div>
+      
       <div class="form-group">
+          <button class="btn btn-default" ng-click="upload();">Upload</button>
+      </div>
+
+      <label>Uploaded Documents</label>
+      <ul>
+        <li>Document One</li>
+      </ul>
+
+      <div class="form-group">
+       
         <button class="btn  btn-primary" type="button" ng-click="next('sign')">SUBMIT FOR OFFERS</button>
         <button class="btn  btn-default" type="button">Back</button>
       </div>
